# university

./: .gitignore  CMakeLists.txt  README.md  access.py  app.py
auth/: routes.py
auth/templates/: login.html
auth/templates/auth/: login.html
configs/: access.json
dbHandler/: query_routes.py  routes.py
dbHandler/sql/: dateUser.sql  login.sql  servicePriceBigger.sql
dbHandler/templates/dbHandler/: dateUser.html  menu.html  response.html  servicePriceBigger.html
doc/: Курсовая(0,25).doc
edit/: routes.py
edit/templates/editHandler/: add.html  change.html  services.html
lab1/: OS_1.docx  a.out  main.c  main.cpp  Егоров_ЛР1.docx  МКВ_Лабораторная1_Егоров.docx
lab2/: OS_2.docx  a.out  main.c  main.cpp  main.out  Егоров_ЛР2.docx  МКВ_ЛР2_ЕгоровАС_РК6_56Б.docx
lab3/: OS_3.docx  a.out  main.c  ~$OS_3.docx  Егоров_ЛР3.docx
queryHandler/: routes.py
queryHandler/sql/: addService.sql  changeService.sql  deleteService.sql  getAllServices.sql
queryHandler/templates/queryHandler/: dateUser.html  servicePriceBigger.html
src/: access.py  app.py
src/auth/: routes.py
src/basket/: routes.py
src/configs/: access.json  db.json
src/dbHandler/: query_routes.py
src/edit/: routes.py
src/queryHandler/: routes.py
src/static/style/: base.css  (+2 more)
src/templates/: base.html  index.html  notFound.html
src/useMySql/: __init__.py  dbСonnection.py  sqlProvider.py
static/style/: base.css  index.css  query.css
static/styles/: base.css  index.css
templates/: base.html  index.html  info.html  notFound.html
useMySql/: __init__.py  dbСonnection.py  sqlProvider.py
(+33 files in other folders)
